src/snapshots/bnfgen__generator__test__typed_generator.snap
---
source: src/generator.rs
expression: "&tree"
---
Branch {
    name: "S",
    children: [
        Branch {
            name: "S",
            children: [
                Branch {
                    name: "S",
                    children: [
                        Branch {
                            name: "S",
                            children: [
                                Branch {
                                    name: "S",
                                    children: [
                                        Branch {
                                            name: "Expr",
                                            children: [
                                                Branch {
                                                    name: "E",
                                                    children: [
                                                        Leaf(
                                                            Terminal(
                                                                "1",
                                                            ),
                                                        ),
                                                    ],
                                                },
                                            ],
                                        },
                                    ],
                                },
                                Branch {
                                    name: "Expr",
                                    children: [
                                        Branch {
                                            name: "E",
                                            children: [
                                                Leaf(
                                                    Terminal(
                                                        "1",
                                                    ),
                                                ),
                                            ],
                                        },
                                        Leaf(
                                            Terminal(
                                                "+",
                                            ),
                                        ),
                                        Branch {
                                            name: "E",
                                            children: [
                                                Leaf(
                                                    Terminal(
                                                        "2",
                                                    ),
                                                ),
                                            ],
                                        },
                                    ],
                                },
                            ],
                        },
                        Branch {
                            name: "Expr",
                            children: [
                                Branch {
                                    name: "E",
                                    children: [
                                        Leaf(
                                            Terminal(
                                                "3",
                                            ),
                                        ),
                                    ],
                                },
                                Leaf(
                                    Terminal(
                                        "+",
                                    ),
                                ),
                                Branch {
                                    name: "E",
                                    children: [
                                        Leaf(
                                            Terminal(
                                                "2",
                                            ),
                                        ),
                                    ],
                                },
                            ],
                        },
                    ],
                },
                Branch {
                    name: "Expr",
                    children: [
                        Branch {
                            name: "E",
                            children: [
                                Leaf(
                                    Terminal(
                                        "2",
                                    ),
                                ),
                            ],
                        },
                        Leaf(
                            Terminal(
                                "+",
                            ),
                        ),
                        Branch {
                            name: "E",
                            children: [
                                Leaf(
                                    Terminal(
                                        "3",
                                    ),
                                ),
                            ],
                        },
                    ],
                },
            ],
        },
        Branch {
            name: "Expr",
            children: [
                Branch {
                    name: "E",
                    children: [
                        Leaf(
                            Terminal(
                                "2",
                            ),
                        ),
                    ],
                },
                Leaf(
                    Terminal(
                        "+",
                    ),
                ),
                Branch {
                    name: "E",
                    children: [
                        Leaf(
                            Terminal(
                                "2",
                            ),
                        ),
                    ],
                },
            ],
        },
    ],
}
