src/snapshots/bnfgen__generator__test__typed_set_algebra.snap
---
source: src/generator.rs
expression: out
---
5890 * 683309 * 0 * 55757
20477 * 663547 - 4
1 - 310560 + 7
3001
{ x : Predicate } U { y : Predicate } U { y : Predicate } U { x : Predicate } U { z : Predicate } U { z : Predicate } U { x : Predicate }
0 - 6 - 310 + 5 + 7 + 98981 * 0 * 53
{ x : Predicate }
8 + 6 + 9
7
9
{ z : Predicate } U { y : Predicate }
563644
9
49728
{ x : Predicate }
{ x : Predicate }
{ z : Predicate }
1 - 3 - 2388
4
{ z : Predicate } U { x : Predicate }
273 * 5 * 5 * 841218 * 819109
49
{ y : Predicate }
574377 * 9 * 2599 + 5
{ y : Predicate }
{ y : Predicate } U { y : Predicate } U { z : Predicate } U { y : Predicate } U { y : Predicate }
{ z : Predicate } U { y : Predicate } U { x : Predicate }
{ z : Predicate }
{ y : Predicate } U { x : Predicate }
{ x : Predicate }
72299
{ z : Predicate } U { z : Predicate } U { x : Predicate }
954 * x * 80699 * 1762 * 2
35991 - 4 * 5 * 0 * 80 + 7 * 8 - 4 + 555 - 9 - 3 + 7
{ y : Predicate } U { y : Predicate } U { z : Predicate } U { x : Predicate } U { y : Predicate } U { y : Predicate } U { x : Predicate }
{ x : Predicate } U { z : Predicate }
{ x : Predicate }
{ z : Predicate }
1 + 5322 * 145943
8 * 70 * 4 * 58
241 * 2545 + 5 * 974513 * 8302
50 - 46
{ x : Predicate } U { z : Predicate }
2805
{ x : Predicate } U { y : Predicate }
{ z : Predicate } U { x : Predicate }
5036 * 8 * 6 * 9 - 89256
z
9 * 148781 * 3 - 468759
4
{ y : Predicate } U { y : Predicate }
6 - 14
6 * 4 - 6
1
44 + 70 + ( 52 ) * 0 - 8 - 718 - 68317 - 22654 * 7 - 2 * 57
{ y : Predicate } U { x : Predicate }
2 - 4
{ x : Predicate }
{ z : Predicate }
6
{ y : Predicate }
8 - 2 + 94495 - 59 * 8314
{ z : Predicate }
{ y : Predicate }
{ z : Predicate }
{ z : Predicate }
6 - 8 * 6 - 81
7
{ x : Predicate }
14
481
5 * 3
{ x : Predicate }
9
{ y : Predicate }
3 * 2
7 + 9 * 838055 - 20
{ z : Predicate }
5 - 254 + 13399 - 1 * 3147
{ y : Predicate }
y
423868 + 425131 * 13417 * 942
3
412
0 - 7 * 374812 * 43216 * 2 + 88088 * 5964 * 9 * 8
{ y : Predicate } U { y : Predicate }
{ x : Predicate } U { z : Predicate } U { z : Predicate }
{ z : Predicate }
{ y : Predicate } U { y : Predicate }
7313
{ y : Predicate } U { x : Predicate }
{ z : Predicate }
177
{ x : Predicate } U { x : Predicate } U { x : Predicate }
{ z : Predicate } U { y : Predicate } U { z : Predicate } U { z : Predicate }
2650 * 86886
{ y : Predicate } U { y : Predicate } U { x : Predicate }
{ y : Predicate } U { y : Predicate } U { y : Predicate }
6 - 515589
149
